--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5075,7 +5075,7 @@ body {
   color: #000;
   padding-bottom: 70px; }
 
-#header .row, .menu1, .sidebar-left, .content, #footer .row {
+#header .row, #menu1 .collapse, .sidebar-left, .content, #footer {
   background: #fff;
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
   border-radius: 0px; }
@@ -5094,22 +5094,18 @@ body {
 #header .adress {
   text-align: right; }
 
-.menu1 ul {
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  -webkit-box-flex: 1;
-  flex: 1 1 auto; }
-
-.menu1 .collapse {
-  -webkit-box-flex: 1;
-  flex: 1 1 auto; }
-
-.menu1 li {
-  text-align: center;
-  padding: 0px 10px;
-  margin: 0px !important;
-  -webkit-box-flex: 1;
-  flex: 1 1 auto; }
+#menu1 {
+  margin: 1rem 0; }
+  #menu1 ul {
+    -webkit-box-pack: justify;
+    justify-content: space-between; }
+    #menu1 ul > li {
+      text-align: center;
+      margin: 0px !important;
+      -webkit-box-align: stretch;
+      align-items: stretch; }
+      #menu1 ul > li > a {
+        padding: 16px 16px; }
 
 .wrapper-content {
   -webkit-box-flex: 1;
