--- a/resources/assets/sass/admin-style.scss
+++ b/resources/assets/sass/admin-style.scss
@@ -69,11 +69,18 @@ body {
 .slide-transition {
   transition: all 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
-
+.wrapper-transition{
+  position: relative;
+  transition: all 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+  left: 300px;
+}
 .slide-enter, .slide-leave {
   left: -100% !important;
 }
+.wrapper-enter, .wrapper-leave {
+  left: 0 !important;
+}
 
-//.admin .content{
-//  margin-top:;
-//}
+.admin .wrapper_content{
+  margin-top:60px;
+}
