--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -5075,68 +5075,80 @@ body {
   color: #000;
   padding-bottom: 70px; }
 
+a {
+  color: #000; }
+  a:hover, a:focus {
+    color: #ff0000;
+    text-decoration: none; }
+
+h1 {
+  display: inline-block;
+  color: #000;
+  text-transform: uppercase;
+  border-bottom: 3px dotted #ff0000; }
+
 #header {
   width: 100%;
-  height: 56px;
+  height: 50px;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   background-color: #fff;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.95);
-  padding: 8px 16px;
+  padding: 0px 16px;
   overflow: hidden; }
   #header button {
     background-color: transparent;
     border: 0px;
-    width: 40px;
-    height: 40px;
+    line-height: 50px;
     font-size: 30px;
     outline: none;
     color: #9f9f9f;
     cursor: pointer;
     border-radius: 50%;
     -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out; }
+    transition: all 0.3s ease-in-out;
+    margin-right: 1rem; }
     #header button:active {
       background-color: rgba(0, 0, 0, 0.1); }
+  #header a {
+    font-size: 32px; }
+
+.wrapper-content {
+  margin-top: 60px; }
+  .wrapper-content.hide-aside #aside {
+    width: 70px; }
+    .wrapper-content.hide-aside #aside span {
+      display: none; }
+  .wrapper-content.hide-aside .content {
+    margin-left: 100px; }
 
 #aside {
   background-color: #fff;
-  width: 300px;
+  width: 200px;
   position: fixed;
-  top: 55px;
+  top: 50px;
   left: 0%;
   bottom: 0;
   z-index: 1;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: start;
-  align-items: flex-start;
+  padding-top: 1rem;
+  padding-left: 1rem;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23); }
-  #aside h2 {
-    font-weight: 300;
-    color: #afafaf; }
+  #aside ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none; }
+    #aside ul li {
+      margin-bottom: 2rem; }
+      #aside ul li a {
+        display: inline-block;
+        vertical-align: middle; }
+        #aside ul li a i {
+          font-size: 2rem;
+          margin-right: 1rem; }
 
-.slide-transition {
-  -webkit-transition: all 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
-  transition: all 0.5s cubic-bezier(0.65, 0.05, 0.36, 1); }
-
-.wrapper-transition {
-  position: relative;
-  -webkit-transition: all 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
-  transition: all 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
-  left: 300px; }
-
-.slide-enter, .slide-leave {
-  left: -100% !important; }
-
-.wrapper-enter, .wrapper-leave {
-  left: 0 !important; }
-
-.admin .wrapper_content {
-  margin-top: 60px; }
+.content {
+  margin-left: 200px; }
 
 /*# sourceMappingURL=admin.css.map */
