--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -5075,17 +5075,17 @@ body {
   color: #000;
   padding-bottom: 70px; }
 
-a {
-  color: #000; }
-  a:hover, a:focus {
-    color: #ff0000;
-    text-decoration: none; }
+a:hover, a:focus {
+  color: #fff;
+  text-decoration: none; }
 
-h1 {
-  display: inline-block;
-  color: #000;
+h2 {
+  color: #aaa;
   text-transform: uppercase;
-  border-bottom: 3px dotted #ff0000; }
+  text-align: right;
+  margin-bottom: 0.3rem;
+  padding-right: 0.5rem;
+  font-weight: 100; }
 
 #header {
   width: 100%;
@@ -5116,37 +5116,44 @@ h1 {
     font-size: 32px; }
 
 .wrapper-content {
-  margin-top: 60px; }
+  padding-top: 60px; }
   .wrapper-content.hide-aside #aside {
     width: 70px; }
     .wrapper-content.hide-aside #aside span {
       display: none; }
   .wrapper-content.hide-aside .content {
-    margin-left: 100px; }
+    margin-left: 72px; }
 
 #aside {
-  background-color: #fff;
+  background-color: #333;
   width: 200px;
   position: fixed;
   top: 50px;
   left: 0%;
   bottom: 0;
   z-index: 1;
-  padding-top: 1rem;
-  padding-left: 1rem;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23); }
   #aside ul {
     margin: 0px;
     padding: 0px;
     list-style: none; }
-    #aside ul li {
-      margin-bottom: 2rem; }
-      #aside ul li a {
-        display: inline-block;
-        vertical-align: middle; }
-        #aside ul li a i {
-          font-size: 2rem;
-          margin-right: 1rem; }
+    #aside ul a {
+      display: -webkit-box;
+      display: flex;
+      -webkit-box-align: center;
+      align-items: center;
+      padding: 1rem 1rem;
+      text-transform: uppercase;
+      border-bottom: 1px solid #aaa;
+      color: #aaa; }
+      #aside ul a:hover, #aside ul a:focus {
+        background-color: rgba(0, 0, 0, 0.3);
+        border-left: 5px solid #fff;
+        padding-left: 0.72rem;
+        color: #fff; }
+      #aside ul a i {
+        font-size: 2rem;
+        margin-right: 1rem; }
 
 .content {
   margin-left: 200px; }
