--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,15 @@
 
 // Body
 $body-bg: #f5f8fa;
+$custom-control-checked-indicator-bg: #333;
+$custom-control-active-indicator-bg: #888;
+$custom-control-focus-indicator-box-shadow: 0 0 0 .075rem #fff, 0 0 0 .2rem #666;
+
+$pagination-active-bg: #333;
+$pagination-active-border: #333;
+$pagination-color: #333;
+
+
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
