--- a/resources/assets/sass/admin-style.scss
+++ b/resources/assets/sass/admin-style.scss
@@ -71,16 +71,16 @@ a {
 
 .wrapper-content {
   padding-top: 50px;
+  position: relative;
+  padding-left: 200px;
 
   &.hide-aside {
+    padding-left: 70px;
     #aside {
       width: 70px;
       span {
         display: none;
       }
-    }
-    .content {
-      margin-left: 70px;
     }
   }
 }
@@ -120,7 +120,7 @@ a {
 }
 
 .content {
-  margin-left: 200px;
+  //margin-left: 200px;
 }
 
 .panel-page{
@@ -153,10 +153,10 @@ a {
   position: relative;
 }
 #editor {
-  position: absolute;
+  position: relative;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  height: 400px;
+  height: 500px;
 }
