--- a/resources/assets/sass/admin-vendor.scss
+++ b/resources/assets/sass/admin-vendor.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-//@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+@import "bower_components/components-font-awesome/scss/font-awesome";
 
 // Variables
 @import "variables";
