--- a/resources/assets/sass/admin-style.scss
+++ b/resources/assets/sass/admin-style.scss
@@ -4,6 +4,8 @@ $background-color1:#333;
 $color2: #000;
 $colorHover2: #3097D1;
 $background-color2:#ff0000;
+$aside: 200px;
+$fontSize1: 40px;
 
 html {
   height: 100%;
@@ -36,33 +38,36 @@ a {
 #header {
   width: 100%;
   height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
   z-index: 100;
   background-color: $background-color1;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.95);
-  padding: 0px 16px;
-  overflow: hidden;
-
+  padding: 0px 10px;
   #button-aside {
     background-color: transparent;
     border: 0px;
-    line-height: 50px;
-    font-size: 30px;
+    font-size: $fontSize1;
     outline: none;
     color: $color1;
     cursor: pointer;
     border-radius: 50%;
-    transition: all 0.3s ease-in-out;
     &:hover, &:focus {
        color: $colorHover1;
      }
   }
-  a.home {
+  .panel-page{
+    flex-basis: 100%;
+    margin-left:144px;
+  }
+  .panel-page-left{
+    margin-left:14px;
+  }
+  #button-home {
     color: $color1;
-    line-height: 50px;
-    font-size: 32px;
+    font-size: $fontSize1;
     &:hover, &:focus {
       color: $colorHover1;
     }
@@ -87,7 +92,7 @@ a {
 
 #aside {
   background-color: $background-color1;
-  width: 200px;
+  width: $aside;
   position: fixed;
   top: 50px;
   left: 0%;
@@ -120,22 +125,10 @@ a {
 }
 
 .content {
-  //margin-left: 200px;
+  position: relative;
 }
 
-.panel-page{
- padding-top:5px;
-  height: 50px;
-  background: $background-color1;
-  h4 {
-    color: #666;
-    line-height: 40px;
-    float: right;
-    margin-bottom: 0.3rem;
-    padding-right: 0.5rem;
-    font-weight: 100;
-  }
-}
+
 
 .table td{
   vertical-align: middle;
@@ -172,11 +165,3 @@ a {
   border-top-right-radius: 1rem;
 }
 
-.xxx{
-  position: absolute;
-  top:4px;
-  left: 200px;
-}
-.xxx-left{
-  left: 70px;
-}
