--- a/resources/assets/sass/admin-style.scss
+++ b/resources/assets/sass/admin-style.scss
@@ -34,6 +34,22 @@ a {
 }
 
 
+//уведомление нижний левый угол
+#snackbar{
+  position:fixed;
+  left:1rem;
+  bottom:1rem;
+  z-index:99999;
+  padding: 10px 20px;
+  background: rgba(0,0,0,0.5);
+  box-shadow: 1px 2px 8px rgba(0,0,0,0.5);
+  color: #ddd;
+  text-transform: uppercase;
+  font-size:1rem;
+}
+
+
+
 
 #header {
   width: 100%;
