--- a/public/panel/css/style.css
+++ b/public/panel/css/style.css
@@ -1,149 +1,1 @@
-html {
-  height: 100%; }
-
-body {
-  position: relative;
-  height: auto !important;
-  min-height: 100%;
-  overflow-x: hidden !important;
-  overflow-y: auto !important;
-  padding-right: 0px !important;
-  background: #f5f5f5;
-  font: 1.4rem/1.6rem Calibri;
-  font-weight: 200;
-  color: #000; }
-
-a {
-  color: #000; }
-  a:hover, a:focus {
-    color: #3097D1;
-    text-decoration: none; }
-
-.custom-control-input {
-  position: static; }
-
-#snackbar {
-  position: fixed;
-  left: 1rem;
-  bottom: 1rem;
-  z-index: 99999;
-  padding: 10px 20px;
-  background: rgba(0, 0, 0, 0.5);
-  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.5);
-  color: #ddd;
-  text-transform: uppercase;
-  font-size: 1rem; }
-
-#header {
-  width: 100%;
-  height: 50px;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  align-items: center;
-  position: fixed;
-  z-index: 100;
-  background-color: #333;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.95);
-  padding: 0px 10px; }
-  #header #button-aside {
-    background-color: transparent;
-    border: 0px;
-    font-size: 40px;
-    outline: none;
-    color: #aaa;
-    cursor: pointer;
-    border-radius: 50%; }
-    #header #button-aside:hover, #header #button-aside:focus {
-      color: #fff; }
-  #header .panel-page {
-    flex-basis: 100%;
-    margin-left: 144px; }
-  #header .panel-page-left {
-    margin-left: 14px; }
-  #header #button-home {
-    color: #aaa;
-    font-size: 40px; }
-    #header #button-home:hover, #header #button-home:focus {
-      color: #fff; }
-
-.wrapper-content {
-  position: relative;
-  padding-top: 52px;
-  position: relative;
-  padding-left: 200px; }
-  .wrapper-content.small-aside {
-    padding-left: 70px; }
-    .wrapper-content.small-aside #aside {
-      width: 70px; }
-      .wrapper-content.small-aside #aside span {
-        display: none; }
-  .wrapper-content.hide-aside {
-    padding-left: 0px; }
-    .wrapper-content.hide-aside #aside {
-      display: none; }
-
-#aside {
-  background-color: #333;
-  width: 200px;
-  position: fixed;
-  top: 50px;
-  left: 0%;
-  bottom: 0;
-  z-index: 1;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23); }
-  #aside ul {
-    margin: 0px;
-    padding: 0px;
-    list-style: none; }
-    #aside ul a {
-      display: -webkit-box;
-      display: flex;
-      -webkit-box-align: center;
-      align-items: center;
-      padding: 1rem 1rem;
-      text-transform: uppercase;
-      border-bottom: 1px solid #aaa;
-      color: #aaa; }
-      #aside ul a:hover, #aside ul a:focus {
-        background-color: rgba(0, 0, 0, 0.3);
-        border-left: 5px solid #fff;
-        padding-left: 0.72rem;
-        color: #fff; }
-      #aside ul a i {
-        font-size: 2rem;
-        margin-right: 1rem; }
-
-.content {
-  position: relative; }
-
-.table td {
-  vertical-align: middle; }
-  .table td .custom-control-indicator {
-    width: 2rem;
-    height: 100%; }
-
-.pagination {
-  padding-left: 3rem; }
-
-#home {
-  position: relative; }
-
-#editor {
-  position: relative;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
-
-.nav-tabs .nav-item.open .nav-link, .nav-tabs .nav-item.open .nav-link:focus, .nav-tabs .nav-item.open .nav-link:hover, .nav-tabs .nav-link.active, .nav-tabs .nav-link.active:focus, .nav-tabs .nav-link.active:hover {
-  color: #e2e5e8;
-  background-color: #333333;
-  box-shadow: 2px 0px 12px -2px #333; }
-
-.nav-tabs .nav-link {
-  padding: 0.35em .7em;
-  font-size: 1.1rem;
-  border-top-right-radius: 1rem; }
+a,body{color:#000}#aside,#header{background-color:#333}#aside ul a,#snackbar{text-transform:uppercase}#header #button-aside:focus,#header #button-aside:hover,#header #button-home:focus,#header #button-home:hover{color:#fff}#aside,#editor{bottom:0;left:0}html{height:100%}body{position:relative;height:auto!important;min-height:100%;overflow-x:hidden!important;overflow-y:auto!important;padding-right:0!important;background:#f5f5f5;font:1.4rem/1.6rem Calibri;font-weight:200}a:focus,a:hover{color:#3097D1;text-decoration:none}.custom-control-input{position:static}#editor,#home,.content,.wrapper-content{position:relative}#snackbar{position:fixed;left:1rem;bottom:1rem;z-index:99999;padding:10px 20px;background:rgba(0,0,0,.5);box-shadow:1px 2px 8px rgba(0,0,0,.5);color:#ddd;font-size:1rem}#header #button-aside,#header #button-home{font-size:40px;color:#aaa}#header{width:100%;height:50px;display:-webkit-box;display:flex;-webkit-box-pack:justify;justify-content:space-between;-webkit-box-align:center;align-items:center;position:fixed;z-index:100;box-shadow:0 1px 5px rgba(0,0,0,.95);padding:0 10px}.wrapper-content.hide-aside #aside,.wrapper-content.small-aside #aside span{display:none}#header #button-aside{background-color:transparent;border:0;outline:0;cursor:pointer;border-radius:50%}#header .panel-page{flex-basis:100%;margin-left:144px}#header .panel-page-left{margin-left:14px}.wrapper-content{padding-top:52px;padding-left:200px}.wrapper-content.small-aside{padding-left:70px}.wrapper-content.small-aside #aside{width:70px}.wrapper-content.hide-aside{padding-left:0}#aside{width:200px;position:fixed;top:50px;z-index:1;box-shadow:0 3px 6px rgba(0,0,0,.16),0 3px 6px rgba(0,0,0,.23)}#aside ul{margin:0;padding:0;list-style:none}#aside ul a{display:-webkit-box;display:flex;-webkit-box-align:center;align-items:center;padding:1rem;border-bottom:1px solid #aaa;color:#aaa}#aside ul a:focus,#aside ul a:hover{background-color:rgba(0,0,0,.3);border-left:5px solid #fff;padding-left:.72rem;color:#fff}#aside ul a i{font-size:2rem;margin-right:1rem}.table td{vertical-align:middle}.table td .custom-control-indicator{width:2rem;height:100%}.pagination{padding-left:3rem}#editor{top:0;right:0}.nav-tabs .nav-item.open .nav-link,.nav-tabs .nav-item.open .nav-link:focus,.nav-tabs .nav-item.open .nav-link:hover,.nav-tabs .nav-link.active,.nav-tabs .nav-link.active:focus,.nav-tabs .nav-link.active:hover{color:#e2e5e8;background-color:#333;box-shadow:2px 0 12px -2px #333}.nav-tabs .nav-link{padding:.35em .7em;font-size:1.1rem;border-top-right-radius:1rem}
