--- a/resources/assets/sass/admin-style.scss
+++ b/resources/assets/sass/admin-style.scss
@@ -19,16 +19,16 @@ body {
   overflow-y: auto !important;
   padding-right: 0px !important;
 
-  background: #f5f5f5;
+  background-color: $background-color1;
   font: 1.4rem/1.6rem Calibri;
   font-weight: 200;
-  color: #000;
+  color: #999;
 }
 
 a {
   color: $color2;
   &:hover, &:focus {
-    color: $colorHover2;
+    color: blue;
     text-decoration: none;
   }
 }
@@ -62,7 +62,6 @@ a {
   align-items: center;
   position: fixed;
   z-index: 100;
-  background-color: $background-color1;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.95);
   padding: 0px 10px;
   #button-aside {
@@ -116,7 +115,6 @@ a {
 }
 
 #aside {
-  background-color: $background-color1;
   width: $aside;
   position: fixed;
   top: 50px;
@@ -177,13 +175,38 @@ a {
 }
 
 .nav-tabs .nav-item.open .nav-link, .nav-tabs .nav-item.open .nav-link:focus, .nav-tabs .nav-item.open .nav-link:hover, .nav-tabs .nav-link.active, .nav-tabs .nav-link.active:focus, .nav-tabs .nav-link.active:hover {
-  color: #e2e5e8;
+  color: silver;
   background-color: #333333;
   box-shadow: 2px 0px 12px -2px #333;
 }
 .nav-tabs .nav-link {
-  padding: 0.35em .7em;
+  padding: 8px 15px;
   font-size:1.1rem;
-  border-top-right-radius: 1rem;
+  border: none;
 }
 
+#edit ul.nav-tabs{
+  background-color: #cccccc;
+}
+#edit .tab-content .card{
+  background-color: #333;
+  border: none;
+}
+#edit .tab-content .card label{
+  margin-bottom: 0px;
+  text-transform: lowercase;
+  font-size: 20px;
+  font-style: italic;
+}
+#edit .tab-content .card .form-control{
+  padding: 6px 10px;
+  font-size: 28px;
+  line-height: 30px;
+  color: #fff;
+  background-color: #666;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+
+}
+#edit .tab-content .card .custom-checkbox{
+  margin-top: 38px;
+}
