--- a/resources/assets/sass/admin-style.scss
+++ b/resources/assets/sass/admin-style.scss
@@ -12,6 +12,7 @@ $fontSize1: 40px;
 
 html {
   height: 100%;
+  background-color: #000;
 }
 
 body {
@@ -27,8 +28,17 @@ body {
   color: #666;
 }
 
-body, #header, #aside {
-  background: url("../img/micro_carbon.png") repeat;
+body, .nav-tabs .nav-link.active {
+  background: url("../img/pattern2.jpg") repeat;
+}
+
+#header, #aside {
+  background: url("../img/pattern1.png") repeat;
+}
+
+.content ul.nav-tabs {
+  background-color: #ddd;
+  background: url("../img/pattern3.png") repeat;
 }
 
 a {
@@ -38,6 +48,7 @@ a {
     text-decoration: none;
   }
 }
+
 
 //исправление checkbox
 .custom-control-input {
@@ -83,6 +94,12 @@ a {
   .panel-page {
     flex-basis: 100%;
     margin-left: 144px;
+    h3 {
+      margin: 0px;
+      font-style: italic;
+      color: #333;
+      text-shadow: 1px 1px 1px #999;
+    }
   }
   .panel-page-left {
     margin-left: 14px;
@@ -121,7 +138,7 @@ a {
 #aside {
   width: $aside;
   position: fixed;
-  top: 52.3px;
+  top: 52.4px;
   left: 0%;
   bottom: 0;
   z-index: 1;
@@ -130,12 +147,14 @@ a {
     margin: 0px;
     padding: 0px;
     list-style: none;
+    li:first-child a {
+      border-top: 1px solid $color1;
+    }
     a {
       display: flex;
       align-items: center;
       padding: 1rem 1rem;
       text-transform: uppercase;
-      border-top: 1px solid $color1;
       border-bottom: 1px solid $color1;
       color: $color1;
       &:hover, &:focus {
@@ -147,35 +166,6 @@ a {
       i {
         font-size: 2rem;
         margin-right: 15px;
-      }
-    }
-    li:first-child a{
-      border-bottom: none;
-    }
-    .dropdown .dropdown-menu {
-      position: relative;
-      float: none;
-      margin-top: -1px;
-      max-width: 100%;
-      min-width: auto;
-      background-color: transparent;
-      li {
-          border-top: 1px solid $color1;
-        a {
-          padding: 10px 18px 10px 18px;
-          border-top: none;
-          border-bottom: none;
-          text-transform: none;
-          &:hover, &:focus {
-            border-left: 3px solid $colorHover1;
-            padding-left: 15px;
-          }
-          i {
-            font-size: 20px;
-            margin-left: 0px;
-            margin-right: 10px;
-          }
-        }
       }
     }
   }
@@ -210,9 +200,8 @@ a {
   left: 0;
 }
 
-.nav-tabs .nav-item.open .nav-link, .nav-tabs .nav-item.open .nav-link:focus, .nav-tabs .nav-item.open .nav-link:hover, .nav-tabs .nav-link.active, .nav-tabs .nav-link.active:focus, .nav-tabs .nav-link.active:hover {
+.nav-tabs .nav-link.active, .nav-tabs .nav-link.active:hover, .nav-tabs .nav-link.active:focus {
   color: silver;
-  background: url("../img/micro_carbon.png") repeat;
   box-shadow: 2px 0px 12px -2px #333;
 }
 
@@ -221,10 +210,6 @@ a {
   line-height: 44px;
   font-size: 1.1rem;
   border: none;
-}
-
-.content ul.nav-tabs {
-  background-color: #cccccc;
 }
 
 .content .tab-content .card {
