--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -4,6 +4,7 @@ $body-bg: #f5f8fa;
 
 $custom-control-checked-indicator-bg: #333;
 $custom-control-active-indicator-bg: #888;
+$custom-control-indicator-bg: #aaa;
 $custom-control-focus-indicator-box-shadow: 0 0 0 .075rem #fff, 0 0 0 .2rem #666;
 
 $pagination-active-bg: #333;
